src/components/ui/Section/Section.module.css
.nav-dropdown {
  --svg-size: 1em;

  position: absolute;
  left: 50%;
  display: flex;
  align-items: center;
  height: 1em;
  aspect-ratio: 1 / 1;
  cursor: pointer;
  transform: translate(-50%, -1.25em);

  .icon {
    width: var(--svg-size);
    height: var(--svg-size);
    stroke: var(--color-surface-primary-950);
  }
}

.navbar {
  position: sticky;
  top: 0;
  left: 0;
  z-index: var(--z-sticky);
  box-sizing: content-box;
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  height: 1em;
  background-color: var(--bar-color, transparent);
  border-bottom: 0.0625em solid var(--color-border-primary);
  isolation: isolate;
  backdrop-filter: blur(var(--bar-blur, 0));

  &.hidden {
    display: none;
    opacity: 0;
  }

  .scroll-button {
    --svg-size: 1em;

    display: flex;
    height: 100%;
    aspect-ratio: 1 / 1;
    cursor: pointer;

    .icon {
      width: var(--svg-size);
      height: var(--svg-size);
      margin: auto;
      background-color: var(--color-surface-primary-200);
      border: solid 0.0625em var(--color-border-primary);
      fill: var(--color-surface-primary-500);
    }
  }

  &::-webkit-scrollbar {
    display: none;
  }

  .wrapper {
    display: flex;
    width: 100%;
    height: 100%;
    overflow: scroll hidden;
    scroll-snap-type: x mandatory;
    -ms-overflow-style: none;

    &::-webkit-scrollbar {
      display: none;
    }

    .page-buttons {
      display: flex;
      flex-direction: row;
      gap: 1em;
      width: max-content;
      height: 100%;
      padding: 0 50%;
      color: var(--text-color-primary);

      .button {
        display: flex;
        align-items: center;
        justify-content: center;
        width: max-content;
        height: 100%;
        cursor: pointer;
        user-select: none;
        scroll-snap-align: center;

        &.selected {
          background-color: var(--color-brand-primary-active);
        }
      }
    }
  }
}

.content {
  z-index: var(--z-base);

  .page-wrap {
    &.hidden {
      display: none;
      opacity: 0;
    }

    .page {
      height: max-content;

      .section {
        position: relative;

        .bar {
          display: flex;
          align-items: center;
          width: 100%;
          height: 1em;
          cursor: pointer;
          user-select: none;
          background-color: var(--color-surface-primary-200);
          border: 0.0625em solid var(--color-surface-primary-300);

          .label {
            position: absolute;
            left: 0.25em;
            overflow: hidden;
            text-overflow: ellipsis;
            color: var(--color-text-primary);
            white-space: nowrap;
          }

          .dropdown {
            --dropdown-size: 0.7em;

            position: absolute;
            right: 0.25em;
          }
        }

        .content {
          width: 100%;
          height: max-content;

          &.closed {
            display: none;
          }
        }
      }
    }
  }
}

